2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c (stdin_thread): If connection closed gracefully but child
	is still running, return 1.  Remove unneeded log call.

2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* Makefile (LDFLAGS): Clear.
	(CFLAGS): Remove PipeLib reference.
	(PIPELIBDIR): New.
	(LIBS): New.
	(INCLUDES): Add -I$(PIPELIBDIR).
	(rshd_unstripped.exe): Link with $(LIBS).
	(download): Don't download tester.exe by default.

2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c: Include getopt.h.
	(logfile): New global.
	(logprintf): Use logfile if set.
	(BUFSIZE): New define.
	(stdin_thread): Use BUFSIZE.  Echo using logprintf.
	(stdout_thread): Likewise.
	(stderr_thread): Likewise.
	(handle_connection): Kill a few warnings.  Set stderrsockfd to -1
	after closing it.  Remove dead code.
	(progname): New global.
	(usage): New function.
	(main): Use getopt.  Add -l option.
	* Makefile (LDFLAGS): Adjust to new PipeLib path.
	(CFLAGS): Likewise.

2007-06-28  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c (localecho): New global.
	(stdin_thread, stdout_thread, stderr_thread): Exit thread with
	exit code of 1 if the thread is closing because the host closed.
	Echo to local console depending on localecho instead of debug.
	(create_child): Use SetPipeTag.
	(handle_connection): If creating the child failed, report an error
	message to the host.  If the remote host closed the connection
	abruptly, kill the child.
	(main): Map -l option to localecho global var.
	
2007-06-26  Pedro Alves  <pedro_alves@portugalmail.pt>

	* Makefile (all): Depend on $(BINS) not $(TARGETS).
	
2007-06-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c (handle_connection): Remove out of sync comment.
	
2007-06-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c (GetStdioPathW, SetStdioPathW): Declare.
	(SafeCloseHandle): New function.
	(stdin_thread): Don't close the reading side of the pipe too early.